# VibeSlopik

./: .gitattributes  .gitignore  LICENSE  README.md  README_RU.md  config.example.toml  pyproject.toml  requirements-speech.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
bridge/dev/: fake-codex-app-server.mjs
docs/: ARCHITECTURE.md  ARCHITECTURE_RU.md  BUILDING.md  BUILDING_RU.md  FAQ.md  FAQ_RU.md  GLOSSARY.md  GLOSSARY_RU.md  HOST.md  HOST_RU.md  IOS.md  IOS_RU.md  LIMITATIONS.md  LIMITATIONS_RU.md  SECURITY.md  SECURITY_RU.md  SPEECH.md  SPEECH_RU.md  TROUBLESHOOTING.md  TROUBLESHOOTING_RU.md  UPDATING.md  UPDATING_RU.md  VPS.md  VPS_RU.md  protocol.md
ios/: README.md
ios/LegacyRemote/: Makefile  VSAppDelegate.h  VSAppDelegate.m  VSBridgeClient.h  VSBridgeClient.m  VSChatViewController.h  VSChatViewController.m  VSDraftStore.h  (+18 more)
relay-go/: go.mod  main.go  main_test.go
scripts/: audit-public-tree.py  build-host.py  build-ios-wsl-local.sh  build-ios-wsl-stable.ps1  build-ios.ps1  build-ios.sh  build-speech-pack.py  check-ios-toolchain.sh  debian-systemd.Dockerfile  diagnose-wsl.ps1  host-entry.py  install-relay-vps.sh  install-sdk-wsl.sh  package-ipa-wsl.sh  package-ipa.ps1  package-ipa.sh  run-host.ps1  run-host.sh  setup-theos-wsl.sh  sign-ipa-bundle-wsl.sh  speech-worker.py  test-host-package.py  test-ios-package.py  test-ios-source.py  test-python-host.py  test-python-relay.py  test-relay-installer-debian.sh  test-release-assets.py  test-speech-package.py  verify-release-assets.py  vibeslopik-relay-manager.sh
tests/: test_host_core.py
(+10 files in other folders)
