[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeslopik-host"
version = "1.0.0"
description = "Cross-platform Codex Host for the VibeSlopik legacy iOS client"
requires-python = ">=3.11"
dependencies = ["Pillow>=10,<13"]
license = {text = "MIT"}

[project.scripts]
vibeslopik-host = "vibeslopik_host.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
